Clean code: Use `List.of()` and `Set.of()` in the Netex import.